syntax = "proto3";

package com.order.grpc;

option java_multiple_files = true;
option java_package = "com.order.grpc";

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
}

message CreateOrderRequest {
  int64 user_id = 1;
  int64 restaurant_id = 2;
  repeated OrderItemRequest items = 3;
  repeated OrderChargeRequest charges = 4;
  double grand_total = 5;
  string currency = 6;
}

message OrderItemRequest {
  int64 item_id = 1;
  int32 quantity = 2;
  double unit_price = 3;
}

message OrderChargeRequest {
  string charge_type = 1;
  double charge_cost = 2;
}

message CreateOrderResponse {
  int64 order_id = 1;
}
