syntax = "proto3";

package com.order.grpc;

option java_multiple_files = true;
option java_package = "com.order.grpc";

service OrderQueryService {
  rpc GetOrderDetails(GetOrderRequest) returns (GetOrderResponse);
}

message GetOrderRequest {
  int64 order_id = 1;
}

message GetOrderResponse {
  int64 order_id = 1;
  string order_status = 2;
  double grand_total = 3;
  string currency = 4;
  int64 created_by = 5;
  int64 restaurant_id = 6;
  repeated OrderItemResponse items = 7;
  repeated OrderChargeResponse charges = 8;
}

message OrderItemResponse {
  int64 item_id = 1;
  int32 quantity = 2;
  double unit_price = 3;
}

message OrderChargeResponse {
  string charge_type = 1;
  double charge_cost = 2;
}
